# Uksivt_telegram

./: Dockerfile  main.py  models.py  my_secrets.py  pyproject.toml  requirements.txt  secrets.py  start.sh  tasks.py  telegram.py  telegram_celery.py
DTOmodels/: schemas.py
callbacks/: __init__.py  events.py  menu.py  menu_router.py  navigation.py  notifications.py  parser.py  queues_router.py  search.py  settings_router.py  test.py  tools.py
core/: methods.py
core/enums/: log_level_enum.py
data/: schedule_api.py
keyboards/: change_name_keyboard.py  menu_keyboard.py  schedule_keyboad.py  settings_keyboard.py
models/: __init__.py  add_to_queue_model.py  group.py  queue_model.py  search_model.py  search_result.py  search_result_callback.py  teacher_model.py  timings_model.py  user_model.py
src/: router.py
src/middlewares/: services_middleware.py  user_middleware.py
src/modules/auth/: auth_handler.py  auth_keyboard.py  auth_router.py
src/modules/misc/: misc_router.py
src/modules/tests/: test_router.py
src/modules/timings/: timings_keyboard.py  timings_router.py  timings_screen.py
src/services/: assets_service.py  data_service.py  user_service.py
telegram/: __init__.py  tasks.py
utils/: celerywrapper.py  extensions.py  logger.py  sender.py
