[tool.poetry]
name = "kronos"
version = "0.1.0"
description = ""
authors = ["EventGamer67 <islamoffdanil67@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.10.0"
pydentic = "^0.0.1.dev3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
